crates/plotnik-lib/tests/03-analyze/definitions/error_anchor_only_body.txt
Q = .
------------------ DIAGNOSTICS -------------------
error: query produces no entrypoints
 --> query.ptk:1:1
  |
1 | Q = .
  | ^
  |
help: every definition must produce a value; `.`, `-field`, and `.!` constrain position but produce nothing
-------------------- SYMBOLS ---------------------
